css/style.css
:root {
  --blue: #0088ff;
  --ink: #111111;
  --soft: #fffdfd;
  --line: #555555;
}

* { box-sizing: border-box; }
html { scroll-behavior: smooth; }
body {
  margin: 0;
  min-width: 0;
  background: #fff;
  color: var(--ink);
  font-family: "Noto Sans JP", "Noto Sans CJK JP", sans-serif;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
  text-rendering: geometricPrecision;
}
a { color: inherit; text-decoration: none; }
img { display: block; }
h1, h2, h3, p, ul { margin: 0; }
ul { padding: 0; }

.site-shell {
  position: relative;
  width: 1441px;
  height: 9228px;
  margin: 0;
  zoom: calc(100vw / 1441px);
  overflow: hidden;
  background: #fff;
}

.hero {
  position: absolute;
  inset: 0 0 auto 0;
  height: 724px;
  background: url("../img/hero.jpg") center center / cover no-repeat;
}
.brand {
  position: absolute;
  left: 45px;
  top: 11px;
  width: 175px;
  height: 53px;
}
.brand img { width: 175px; height: auto; }
.global-nav {
  position: absolute;
  left: 439px;
  top: 17px;
  display: flex;
  align-items: flex-start;
  gap: 50px;
  white-space: nowrap;
  color: #fff;
  font-size: 22px;
  line-height: 1.5;
  font-weight: 400;
}
.global-nav a { display: block; }
.hero h1 {
  position: absolute;
  left: 78px;
  top: 139px;
  color: #fff;
  font-size: 72px;
  font-weight: 400;
  line-height: 1.2;
  letter-spacing: 0;
}

main { position: absolute; inset: 0; }
section { position: absolute; left: 0; width: 1441px; }
section h2 {
  color: var(--blue);
  font-size: 40px;
  font-weight: 700;
  line-height: 1.3;
  letter-spacing: 0;
}
section h3 {
  font-size: 28px;
  font-weight: 700;
  line-height: 1.35;
}

.hours {
  left: 140px;
  width: 1160px;
  height: 414px;
  background: #fff;
}
.hours-top { top: 724px; }
.hours-bottom { top: 8050px; }
.hours h2 { position: absolute; left: 0; top: 49px; }
.hours-table { position: absolute; inset: 0; }
.weekdays, .hours-row { position: absolute; inset: 0; }
.day, .mark {
  position: absolute;
  width: 60px;
  transform: translateX(-50%);
  text-align: center;
}
.day {
  top: 108px;
  font-size: 22px;
  font-weight: 700;
  line-height: 30px;
}
.mon { left: 317px; }
.tue { left: 448px; }
.wed { left: 580px; }
.thu { left: 711px; }
.fri { left: 842px; }
.sat { left: 973px; }
.sun { left: 1105px; }
.table-rule {
  position: absolute;
  left: 0;
  width: 1160px;
  height: 1px;
  background: var(--line);
}
.rule-top { top: 157px; }
.rule-bottom { top: 281px; }
.hours-row .period,
.hours-row .time {
  position: absolute;
  font-size: 20px;
  line-height: 30px;
  font-weight: 700;
}
.hours-row .period { left: 0; }
.hours-row .time { left: 125px; }
.morning .period, .morning .time { top: 175px; }
.afternoon .period, .afternoon .time { top: 231px; }
.mark {
  font-size: 20px;
  line-height: 22px;
  font-weight: 700;
}
.morning .mark { top: 184px; }
.afternoon .mark { top: 247px; }
.mark.off { font-size: 18px; font-weight: 400; color: #555; }
.hours-note {
  position: absolute;
  left: 0;
  top: 296px;
  font-size: 18px;
  line-height: 22px;
  letter-spacing: 0;
}

.care-strip { top: 1138px; height: 315px; }
.care-strip img { width: 1441px; height: 315px; }

.news { top: 1453px; height: 692px; background: #fff; }
.news-image {
  position: absolute;
  left: 122px;
  top: 108px;
  width: 366px;
  height: 440px;
}
.news-content h2 { position: absolute; left: 590px; top: 102px; }
.news-list {
  position: absolute;
  left: 602px;
  top: 181px;
  width: 706px;
  list-style: none;
}
.news-list li {
  position: relative;
  height: 69px;
  border-bottom: 1px solid #8d8d8d;
}
.news-list a {
  position: absolute;
  left: 0;
  top: 4px;
  font-size: 20px;
  line-height: 32px;
}
.outline-button {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 200px;
  height: 36px;
  border: 1px solid #777;
  background: #fff;
  font-size: 18px;
  line-height: 1;
}
.news-button { position: absolute; left: 1118px; top: 549px; }

.greeting { top: 2145px; height: 813px; background: var(--soft); }
.greeting-image {
  position: absolute;
  left: 138px;
  top: 103px;
  width: 440px;
  height: 380px;
}
.doctor-en {
  position: absolute;
  left: 138px;
  top: 565px;
  width: 440px;
  text-align: center;
  font-size: 40px;
  line-height: 48px;
  font-weight: 400;
}
.greeting-content h2 { position: absolute; left: 694px; top: 99px; }
.greeting-copy {
  position: absolute;
  left: 694px;
  top: 184px;
  width: 610px;
  font-size: 20px;
  line-height: 24px;
}
.greeting-copy p + p { margin-top: 13px; }
.signature {
  position: absolute;
  right: 141px;
  top: 640px;
  font-size: 26px;
  line-height: 36px;
  white-space: nowrap;
}

.medical { top: 2958px; height: 1660px; background: #fff; }
.medical > h2 { position: absolute; left: 50%; top: 91px; transform: translateX(-50%); }
.medical-item { position: absolute; left: 0; width: 1441px; height: 300px; }
.medical-item img { position: absolute; width: 380px; height: 300px; }
.medical-item-1 { top: 193px; }
.medical-item-2 { top: 543px; }
.medical-item-3 { top: 893px; }
.medical-item-4 { top: 1243px; }
.medical-item-1 img, .medical-item-3 img { left: 128px; }
.medical-item-2 img, .medical-item-4 img { left: 933px; }
.medical-text { position: absolute; top: 60px; font-size: 20px; }
.medical-text h3 { margin-bottom: 30px; }
.medical-text p { line-height: 35px; }
.medical-text.text-right { left: 609px; width: 710px; text-align: left; }
.medical-text.text-left { left: 159px; width: 672px; text-align: right; }
.medical-item-3 .medical-text { top: 55px; }
.medical-button { position: absolute; left: 1113px; top: 330px; }

.about { top: 4700px; height: 520px; background: #fff; }
.about-image {
  position: absolute;
  left: 128px;
  top: 106px;
  width: 380px;
  height: 300px;
}
.about-content h2 { position: absolute; left: 618px; top: 101px; }
.about-content > p {
  position: absolute;
  left: 618px;
  top: 181px;
  width: 700px;
  font-size: 20px;
  line-height: 30px;
}
.about-button { position: absolute; left: 1112px; top: 366px; }

.staff { top: 5260px; height: 2075px; background: #fff; }
.staff > h2 { position: absolute; left: 50%; top: 93px; transform: translateX(-50%); }
.staff-lead {
  position: absolute;
  left: 320px;
  top: 187px;
  width: 820px;
  font-size: 20px;
  line-height: 30px;
}
.staff-item { position: absolute; left: 0; width: 1441px; height: 300px; }
.staff-item img { position: absolute; width: 380px; height: 300px; }
.staff-item-1 { top: 416px; }
.staff-item-2 { top: 856px; }
.staff-item-3 { top: 1296px; }
.staff-item-4 { top: 1736px; }
.staff-item-1 img, .staff-item-3 img { left: 130px; }
.staff-item-2 img, .staff-item-4 img { left: 936px; }
.staff-copy { position: absolute; font-size: 20px; line-height: 30px; }
.staff-copy h3 { margin-bottom: 27px; }
.staff-copy ul { list-style-position: outside; padding-left: 25px; }
.staff-copy li { margin: 0; }
.staff-copy.right-copy { left: 590px; top: 52px; width: 720px; }
.staff-copy.left-copy { left: 138px; top: 38px; width: 699px; }
.staff-copy.left-copy h3 { text-align: right; }
.staff-item-2 .staff-copy { top: 39px; }
.staff-item-3 .staff-copy { top: 30px; }
.staff-item-4 .staff-copy { top: 17px; }

.access { top: 7350px; height: 620px; background: #fff; }
.access > h2 { position: absolute; left: 50%; top: 91px; transform: translateX(-50%); }
.map-image {
  position: absolute;
  left: 188px;
  top: 190px;
  width: 620px;
  height: 390px;
}
.access-details { position: absolute; left: 858px; top: 187px; width: 430px; }
.access-details h3 { font-size: 28px; }
.access-details ul {
  margin-top: 34px;
  padding-left: 28px;
  font-size: 20px;
  line-height: 31px;
}
.contact-block { margin-top: 42px; }
.contact-block ul { margin-top: 31px; }

.departments { top: 8500px; height: 659px; text-align: center; background: #fff; }
.departments > h2 { position: absolute; left: 50%; top: 59px; transform: translateX(-50%); }
.department-list {
  position: absolute;
  left: 0;
  top: 160px;
  width: 1441px;
  font-size: 28px;
  line-height: 69px;
  font-weight: 500;
}
.department-note {
  position: absolute;
  left: 0;
  top: 535px;
  width: 1441px;
  font-size: 14px;
  line-height: 22px;
}

.site-footer {
  position: absolute;
  left: 0;
  top: 9159px;
  width: 1441px;
  height: 69px;
  display: flex;
  align-items: center;
  justify-content: center;
  background: var(--blue);
  color: #fff;
}
.site-footer small { font-size: 18px; line-height: 1; }

